--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
   "dependencies": {
     "@vituum/vite-plugin-postcss": "^1.1.0",
     "vite-plugin-handlebars": "^2.0.0"
+  },
+  "engines": {
+    "node": ">=16.0.0"
   }
 }
