--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@typescript-eslint/parser": "^8.9.0",
     "@vituum/vite-plugin-postcss": "^1.1.0",
     "eslint": "^9.12.0",
+    "postcss": "^8.4.47",
     "stylelint": "^16.10.0",
     "stylelint-config-standard": "^36.0.1",
     "vite": "^5.4.1",
@@ -21,5 +22,8 @@
   },
   "engines": {
     "node": ">=16.0.0"
+  },
+  "dependencies": {
+    "handlebars": "^4.7.8"
   }
 }
