--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "node": ">=16.0.0"
   },
   "dependencies": {
-    "handlebars": "^4.7.8"
+    "handlebars": "^4.7.8",
+    "uuid": "^10.0.0"
   }
 }
