--- a/.editorconfig
+++ b/.editorconfig
@@ -5,16 +5,14 @@ root = true
 
 # Unix-style newlines with a newline ending every file
 [*]
+charset = utf-8
 end_of_line = lf
 insert_final_newline = true
+trim_trailing_whitespace = true
 
-indent_size = 4
 indent_style = space
+indent_size = 4
 
 [*.json]
+indent_style = space
 indent_size = 2 
-
-# JavaScript and TypeScript files should end with a semicolon
-[*.{js,ts}]
-charset = utf-8
-trim_trailing_whitespace = true
