--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "prebuild": "tsc --noEmit",
     "build": "npm run prebuild && vite build",
     "preview": "vite preview",
-    "start": "vite build && vite preview"
+    "start": "vite build && vite preview",
+    "lint": "stylelint \"**/*.css\""
   },
   "devDependencies": {
     "@eslint/js": "^9.12.0",
