--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,12 +1,10 @@
 {
   "extends": "stylelint-config-standard",
-  "rules": {
-    "function-url-quotes": "always",
-    "selector-attribute-quotes": "always"
-  },
   "ignoreFiles": [
-    "dist/*",
-    "node_modules/*",
-    "github/*"
-  ]
+    "dist/**/*.css",
+    "src/styles/normalize.css"
+  ],
+  "rules": {
+    "declaration-block-no-redundant-longhand-properties": null
+  }
 }
