--- a/package.json
+++ b/package.json
@@ -9,18 +9,30 @@
     "build": "npm run prebuild && vite build",
     "preview": "vite preview",
     "start": "vite build && vite preview",
-    "lint": "stylelint \"**/*.css\""
+    "lint": "stylelint \"**/*.css\"",
+    "test": "mocha 'src/**/*.test.ts'"
   },
   "devDependencies": {
     "@eslint/js": "^9.12.0",
+    "@types/chai": "^5.0.1",
+    "@types/mocha": "^10.0.10",
+    "@types/node": "^22.10.1",
+    "@types/sinon": "^17.0.3",
+    "@types/sinon-chai": "^4.0.0",
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^8.9.0",
     "@typescript-eslint/parser": "^8.9.0",
     "@vituum/vite-plugin-postcss": "^1.1.0",
+    "chai": "^5.1.2",
     "eslint": "^9.12.0",
+    "jsdom": "^25.0.1",
+    "mocha": "^10.8.2",
     "postcss": "^8.4.47",
+    "sinon": "^19.0.2",
+    "sinon-chai": "^4.0.0",
     "stylelint": "^16.10.0",
     "stylelint-config-standard": "^36.0.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5.6.3",
     "vite": "^5.4.1",
     "vite-plugin-handlebars": "^2.0.0"
