--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@vituum/vite-plugin-postcss": "^1.1.0",
     "chai": "^5.1.2",
     "eslint": "^9.12.0",
+    "husky": "^9.1.7",
     "jsdom": "^25.0.1",
     "mocha": "^10.8.2",
     "postcss": "^8.4.47",
@@ -43,5 +44,11 @@
   "dependencies": {
     "handlebars": "^4.7.8",
     "uuid": "^10.0.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm-run-all test lint:all",
+      "pre-push": "npm run other command"
+    }
   }
 }
