--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
     "strictNullChecks": true
   },
   "include": ["src"],
+  "prepare": "husky",
   "ts-node": {
     "esm": true,
     "experimentalSpecifierResolution": "node",
