--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "preview": "vite preview",
     "start": "vite build && vite preview",
     "lint": "stylelint \"**/*.css\"",
-    "test": "mocha 'src/**/*.test.ts'"
+    "test": "mocha 'src/**/*.test.ts'",
+    "prepare": "husky install"
   },
   "devDependencies": {
     "@eslint/js": "^9.12.0",
@@ -25,7 +26,7 @@
     "@vituum/vite-plugin-postcss": "^1.1.0",
     "chai": "^5.1.2",
     "eslint": "^9.12.0",
-    "husky": "^9.1.7",
+    "husky": "^8.0.0",
     "jsdom": "^25.0.1",
     "mocha": "^10.8.2",
     "postcss": "^8.4.47",
@@ -47,8 +48,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm-run-all test lint:all",
-      "pre-push": "npm run other command"
+      "pre-commit": "npm-run-all test lint:all"
     }
   }
 }
