--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview",
     "start": "vite build && vite preview",
     "lint": "stylelint \"**/*.css\"",
+    "eslint": "eslint \"src/**/*.ts\"",
     "test": "mocha 'src/**/*.test.ts'",
     "prepare": "husky install"
   },
@@ -48,7 +49,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm-run-all test lint:all"
+      "pre-commit": "npm test && npm run eslint && npm run lint"
     }
   }
 }
