Keep calm and commit

--- a/package.json
+++ b/package.json
@@ -46,5 +46,10 @@
   "dependencies": {
     "handlebars": "^4.7.8",
     "uuid": "^10.0.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run pre-commit"
+    }
   }
 }
